Include script.js in index.html
Added script.js to the HTML file.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="galeriaContainer" class="galeria-container"></div>
     </div>
 
-
 </body>
-
+<script src="script.js"></script>
 </html>
+
