Include external CSS and JS files
Added external stylesheet and script references.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Generador de Tarjetas</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="/mi-repo/style.css">
+    <script src="/mi-repo/script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -49,7 +51,7 @@
     </div>
 
 </body>
-<script src="script.js"></script>
 </html>
+
 
 
