--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Generador de Tarjetas</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <link rel="stylesheet" href="/mi-repo/style.css">
-    <script src="/mi-repo/script.js"></script>
+    <link rel="stylesheet" href="/tarjeta/style.css">
+    <script src="/tarjeta/script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -52,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
